# rust_api_template

./: Cargo.toml
migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
migrations/2022-08-24-225554_create_posts/: up.sql
src/: db.rs  main.rs  models.rs  routes.rs  schema.rs
